fixed layout issue

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -19,7 +19,6 @@
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  overflow-x:hidden ;
 }
 
 ::-webkit-scrollbar {
